# lfric-a-brac

./: README.md  environment.yml  pyproject.toml
data/: cs32.nc  cs8.nc  generate_velocity.py
lfric-a-brac/: cell_vectors.py  extensive_field.py  function_space.py  lateral_flux.py  line_average_vector.py  line_average_vector_field.py  point_vectors.py  polyline.py  space.py
lfricabrac/: __init__.py  cell_vectors.py  config.ini  extensive_field.py  lateral_flux.py  line_average_vector.py  point_vectors.py  polyline.py
lfricabrac/data/: cs2.nc  generate_velocity.py
lfricabrac/tests/: test_extensive_field.py  test_polyline.py  test_streamfunction.py
